--- a/app/views/outfits/edit.html.haml
+++ b/app/views/outfits/edit.html.haml
@@ -91,6 +91,7 @@
       %h2 Add an item
       %input{:name => "query", :placeholder => "Search items...", :type => "search"}/
       %input{:type => "submit", :value => "Go"}/
+      %a#preview-search-form-your-items{:href => '#'} Your Items
       #preview-search-form-pagination
       %a#preview-search-form-clear{:href => "#"} clear
     %dl#preview-search-form-help
