closet importer gets back to your items link

--- a/app/stylesheets/closet_pages/_new.sass
+++ b/app/stylesheets/closet_pages/_new.sass
@@ -1,7 +1,20 @@
 body.closet_pages-new, body.closet_pages-create
 
+  #title
+    float: left
+
+  .flash
+    clear: both
+
+  #back-to-items
+    +awesome-button
+    margin:
+      left: 1em
+      top: .75em
+
   #closet-page-form
     +clearfix
+    clear: both
     margin-bottom: 1em
 
   #closet-page-frame-wrapper
