--- a/app/views/closet_pages/new.html.haml
+++ b/app/views/closet_pages/new.html.haml
@@ -1,4 +1,6 @@
 - title "Closet Importer, Page #{@closet_page.index}"
+- content_for :before_flashes do
+  = link_to 'Back to Your Items', user_closet_hangers_path(current_user), :id => 'back-to-items'
 
 = form_for @closet_page, :html => {:id => 'closet-page-form'} do |f|
   #closet-page-frame-wrapper
